--- a/hexlet-jest/package.json
+++ b/hexlet-jest/package.json
@@ -9,6 +9,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/preset-env": "^7.18.10",
     "jest": "^28.1.3"
+  },
+  "dependencies": {
+    "lodash": "^4.17.21"
   }
 }
